[MotionMark] Computing the fast bounding rect of an arc should not materialize a CGPathRef https://bugs.webkit.org/show_bug.cgi?id=217563

Reviewed by Darin Adler.

Avoid hitting the slow case when asking for the fast bounding rect of a `Path`, in the case where the path
consists of a single circular arc. This fast bounding rect is intended to be a conservative way to estimate the
bounds of the path, such that the actual bounds of the path must lie within the bounds of this fast rect. At the
cost of being less accurate, we can make this fast computation much cheaper in the case of a circular arc by
simply returning the bounding rect of the circle containing the arc.

* platform/graphics/InlinePathData.h:
(WebCore::ArcData::encode const):
(WebCore::ArcData::decode):

Additionally rename what is currently `ArcData`'s `offset` member to `start` instead, and `hasOffset` to
`hasStart` for clarity. This point optionally provides the starting point of a line segment that is connected to
the circular arc defined by the center point, radius, and start and end angles. Note that this starting point
needs to be included in the fast bounding rect computation for this reason (see above).

* platform/graphics/Path.cpp:
(WebCore::Path::addArc):
(WebCore::Path::fastBoundingRect const):
(WebCore::Path::fastBoundingRectFromInlineData const):
(WebCore::Path::boundingRectFromInlineData const):
* platform/graphics/Path.h:
* platform/graphics/cg/PathCG.cpp:
(WebCore::Path::createCGPath const):
* platform/graphics/displaylists/DisplayListItems.cpp:
(WebCore::DisplayList::StrokePath::localBounds const):

Also, use the fast bounding rect when estimating `localBounds` of the `StrokePath` item; these local bounds are
only used in an optimization that skips display list items during playback, based on the extent of the item, so
it's safe to use extents that are potentially inflated. Using the fast bounding rect also helps in the case of
the more complex paths encountered in the Canvas Paths subtest of MotionMark, where each Path contains multiple
components and cannot be expressed solely with inline path data.


Canonical link: https://commits.webkit.org/230343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268320 268f45cc-cd09-0410-ab3c-d52691b4dbfc