Source/WebCore/platform/graphics/cg/PathCG.cpp
@@ -98,8 +98,8 @@ void Path::createCGPath() const
             CGPathAddLineToPoint(m_path.get(), nullptr, line.end.x(), line.end.y());
         },
         [&](const ArcData& arc) {
-            if (arc.hasOffset)
-                CGPathMoveToPoint(m_path.get(), nullptr, arc.offset.x(), arc.offset.y());
+            if (arc.hasStart)
+                CGPathMoveToPoint(m_path.get(), nullptr, arc.start.x(), arc.start.y());
             CGPathAddArc(m_path.get(), nullptr, arc.center.x(), arc.center.y(), arc.radius, arc.startAngle, arc.endAngle, arc.clockwise);
         },
         [&](const QuadCurveData& curve) {
